	and fixed button/axis lists.
	* src/controls/keybinds-parser.scm: Added support for more operations,
	and made (axis-pair a b) subtract 1 from a and b to give the button
	number like (button n). Also made it verify the length of the arg lists
	at this stage as opposed to the C-step.
	* build/.keybinds, build/.keybinds_rand: Added new examples that reflect
	the new operations.
	* src/common.h: Change the joystick processing param struct to have a
	send AND poll rate.
	* src/controls/controls.c: Changed the process_joystick() loop to look
	at the poll rate.
	* src/ui/main.c: Added a new main that reflects the new operations.
2014-3-15 Joe Jevnik <joejev@gmail.com>
	* src/controls/keybinds-parser.scm: Added a gen-op macro that will let
	me more quickly add operations in the future, while assuring they are
	correct. Also made all-buttons? and all-axis? check for length to
	simplify the macro. Thanks to Jack Pugmire for the scheme help.

2014-3-18 Joe Jevnik <joejev@gmail.com>
	* src/controls/keybinds.c: Shortened the call to read_jsevent by
	unioning the axis name with an array of axes where the name and number
	relate.
	* src/common.h, src/controls/keybinds.h: Moved the definiton of
	rov_jsaxis and rov_joystick to common, and added the union as described.
	Also made rov_arduino contain an rov_keybinds structure.
	* src/ui/keyboard.h, src/ui/keyboard.c: Added these to handle keyboard
	interaction with the ROV program. Currently support 'l': reload the
	.keybinds file at runtime.
	* TODO: Updated TODO.

2014-3-22 Joe Jevnik <joejev@gmail.com>
	* lib/*: Moved screen and library functions into their own libraries to
	be linked with the main project.
	* src/ui/main: Made the changes for the libraries.
	* src/ui/controls.c: Removed all library functions.
	* src/common.h: Removed the structures defined by my new libraries.
	* src/CMakeLists.txt: Added the static linking of the 2 libraries.
	* src/librov/*: Added headers for librov.